@@ -19,6 +19,13 @@ public:
 private slots:
     void on_pushButton_clicked();
 
+    void on_pushButton_2_clicked();
+
+    void on_pushButton_3_clicked();
+
+    void on_buttonInvertColor_clicked();
+
+
 private:
     Ui::customizeSplashDialog *ui;
 };
